gl31-master/src/test/deca/syntax/valid/sansobjet/prog_while.deca
// Description:
//    tests de programme correct syntaxiquement pour sans-objet
//
// Resultats:
//    Succes attendu
//
// Historique:
//    cree le 12/01/2021
{
    int aaaa = 7;
    while(aaaa < 23){
        aaaa = aaaa + 1;
    }
}
